# ai

./: .gitignore  CMakeLists.txt  README.md  main  main.cu
cuda/: CMakeLists.txt  add_arr.cu  add_arrays.cpp  kernels.cu
examples/: CMakeLists.txt  inference.cpp
runtime/: CMakeLists.txt
